--- a/index.html
+++ b/index.html
@@ -69,22 +69,13 @@
         <div class="audio-controls">
             <i class="fa-solid fa-arrow-rotate-left"></i>
             <i class="fa-solid fa-backward-step"></i>
-            <i id="play-icon" class="fa-regular fa-circle-play hide-icon"></i>
-            <i id="pause-icon" class="fa-regular fa-circle-pause"></i>
             <i class="fa-solid fa-forward-step"></i>
             <i class="fa-solid fa-arrow-rotate-right"></i>
         </div>
         <div id="audio-player-container">
-            <audio preload=”metadata” loop id="audio-player"
+            <audio preload=”metadata” loop id="audio-player" controls
                 src="http://listen.vo.llnwd.net/g3/prvw/9/5/1/1/7/2489571159.mp3">
             </audio>
-            <span id="current-time" class="time">0:00</span>
-            <input type="range" id="seek-slider" value="0" min="0" max="100">
-            <span id="duration" class="time">0:00</span>
-        </div>
-        <div class="sound-controls">
-            <i class="fa-solid fa-volume-low"></i>
-            <input type="range" id="volume-slider" value="0" min="0" max="100">
         </div>
     </div>
     <div class="songs-queue">
