top artist partially completed

--- a/index.html
+++ b/index.html
@@ -63,80 +63,21 @@
         <section id="topTracks">
             <h1 class="section-title">Top Tracks</h1>
             <div class="topTracks-list custom-scroll">
-                <div data-demo-song-name="name" data-track-link="href" class="song-card" data-song-preview="previewURL">
-                    <img src="https://img.freepik.com/premium-vector/vintage-styled-retro-live-rock-music-party-event-poster_148087-69.jpg?w=2000"
-                        alt="">
-                    <i data-song-option-toggle class="fa-solid fa-ellipsis"></i>
-                    <div class="song-card-options">
-                        <p>Add to playlist</p>
-                        <p>Add to queue</p>
-                        <p>Play next</p>
-                    </div>
-                    <div class="music-text custom-scroll">
-                        <p class="primary-text">Lane & Massane</p>
-                        <p class="primary-text">And we know it</p>
-                    </div>
-                </div>
-                <div data-demo-song-name="name" data-track-link="href" class="song-card" data-song-preview="previewURL">
-                    <img src="https://img.freepik.com/premium-vector/vintage-styled-retro-live-rock-music-party-event-poster_148087-69.jpg?w=2000"
-                        alt="">
-                    <div class="music-text custom-scroll">
-                        <p class="primary-text">Lane & Massane</p>
-                        <p class="primary-text">And we know it</p>
-                    </div>
-                </div>
-                <div data-demo-song-name="name" data-track-link="href" class="song-card" data-song-preview="previewURL">
-                    <img src="https://img.freepik.com/premium-vector/vintage-styled-retro-live-rock-music-party-event-poster_148087-69.jpg?w=2000"
-                        alt="">
-                    <div class="music-text custom-scroll">
-                        <p class="primary-text">Lane & Massane</p>
-                        <p class="primary-text">And we know it</p>
-                    </div>
-                </div>
+                <div class="load"></div>
+
             </div>
         </section>
         <section id="topArtists">
             <h1 class="section-title">Top Artists</h1>
             <div class="topArtists-list custom-scroll">
-                <div data-demo-song-name="name" data-track-link="href" class="song-card" data-song-preview="previewURL">
-                    <img src="https://img.freepik.com/premium-vector/vintage-styled-retro-live-rock-music-party-event-poster_148087-69.jpg?w=2000"
-                        alt="">
+                <div class="load"></div>
 
-                    <div class="music-text custom-scroll">
-                        <p class="primary-text">Lane & Massane</p>
-                        <p class="primary-text">And we know it</p>
-                    </div>
-                </div>
-                <div data-demo-song-name="name" data-track-link="href" class="song-card" data-song-preview="previewURL">
-                    <img src="https://img.freepik.com/premium-vector/vintage-styled-retro-live-rock-music-party-event-poster_148087-69.jpg?w=2000"
-                        alt="">
-                    <div class="music-text custom-scroll">
-                        <p class="primary-text">Lane & Massane</p>
-                        <p class="primary-text">And we know it</p>
-                    </div>
-                </div>
-                <div data-demo-song-name="name" data-track-link="href" class="song-card" data-song-preview="previewURL">
-                    <img src="https://img.freepik.com/premium-vector/vintage-styled-retro-live-rock-music-party-event-poster_148087-69.jpg?w=2000"
-                        alt="">
-                    <div class="music-text custom-scroll">
-                        <p class="primary-text">Lane & Massane</p>
-                        <p class="primary-text">And we know it</p>
-                    </div>
-                </div>
-                <div data-demo-song-name="name" data-track-link="href" class="song-card" data-song-preview="previewURL">
-                    <img src="https://img.freepik.com/premium-vector/vintage-styled-retro-live-rock-music-party-event-poster_148087-69.jpg?w=2000"
-                        alt="">
-                    <div class="music-text custom-scroll">
-                        <p class="primary-text">Lane & Massane</p>
-                        <p class="primary-text">And we know it</p>
-                    </div>
-                </div>
             </div>
 
         </section>
-        <section id="topGenre">
-            <h1 class="section-title">Top in the genre</h1>
-            <div class="topGenre-list custom-scroll">
+        <section id="topPlaylist">
+            <h1 class="section-title">Top playlist</h1>
+            <div class="topPlaylist-list custom-scroll">
                 <div class="load"></div>
             </div>
 
