--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="nav-items">
             <form>
-                <input type="text" placeholder="What you wish ?">
+                <input type="text" placeholder="What's you wish ?">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
             <div class="profile">
@@ -79,6 +79,7 @@
             <h1 class="section-title">Top playlist</h1>
             <div class="topPlaylist-list custom-scroll">
                 <div class="load"></div>
+
             </div>
 
         </section>
@@ -106,8 +107,8 @@
     <div class="songs-queue">
         <div class="songs-queue-toggler">
             <p>Queue</p>
-            <i class="fa-solid fa-chevron-up"></i>
-            <i class="fa-solid fa-chevron-down"></i>
+            <!-- <i class="fa-solid fa-chevron-up"></i>
+            <i class="fa-solid fa-chevron-down"></i> -->
         </div>
         <div class="container">
             <h2>Currently playing</h2>
