--- a/index.html
+++ b/index.html
@@ -107,21 +107,13 @@
     <div class="songs-queue">
         <div class="songs-queue-toggler">
             <p>Queue</p>
-            <!-- <i class="fa-solid fa-chevron-up"></i>
-            <i class="fa-solid fa-chevron-down"></i> -->
-        </div>
-        <div class="container">
-            <h2>Currently playing</h2>
-            <div class="queue-current-playing">
-                <div class="play-pause"></div>
-                <div class="song-image"></div>
-                div
-            </div>
-            <h2>Up next</h2>
-            <div class="upNextOptions">
+            <div class="options">
                 <i class="fa-solid fa-shuffle"></i>
                 <i class="fa-solid fa-trash"></i>
             </div>
+        </div>
+        <div class="container">
+
         </div>
     </div>
 </body>
