before making breaking changes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,16 @@
             </section>
         </div>
         <div class="hide-page div-page" id="search-page">
-
+            <div class="search-result">
+                <h1>Search results</h1>
+                <div class="search-results-container custom-scroll">
+                    <p class="noResult">No search result yet😉...</p>
+                </div>
+                <h1>Recently played</h1>
+                <div class="recentlyPlayed-container">
+                    <p class="noRecent">Nothing recently played yet🎵...</p>
+                </div>
+            </div>
         </div>
         <div class="hide-page div-page" id="playlist-page">
 
