before breaking changes

--- a/index.html
+++ b/index.html
@@ -135,9 +135,10 @@
                 <i class="fa-solid fa-trash"></i>
             </div>
         </div>
-        <div class="container">
-
-        </div>
+        <p class="currently-playing">Currently playing</p>
+        <div class="currently-playing-container"></div>
+        <p class="next-playing">Next</p>
+        <div class="next-playing-container"></div>
     </div>
 </body>
 
