--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <p class="noResult">No search result yet😉...</p>
                 </div>
                 <h1>Recently played</h1>
-                <div class="recentlyPlayed-container">
+                <div class="recentlyPlayed-container custom-scroll">
                     <p class="noRecent">Nothing recently played yet🎵...</p>
                 </div>
             </div>
