--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             </div>
         </div>
         <div class="hide-page div-page" id="playlist-page">
-
+            <h1>Your favorites 🍀</h1>
+            <div class="favorites-container"></div>
         </div>
     </main>
     <div class="audio-player">
