--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
                 </div>
 
             </section>
+            <footer>
+                <div class="footer-icons">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
+                <p>Copyright © 2022, made by Vinit 💖</p>
+            </footer>
         </div>
         <div class="hide-page div-page" id="search-page">
             <div class="search-result">
@@ -103,11 +113,32 @@
                     <p class="noRecent">Nothing recently played yet🎵...</p>
                 </div>
             </div>
+            <footer>
+                <div class="footer-icons">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
+                <p>Copyright © 2022, made by Vinit 💖</p>
+            </footer>
         </div>
         <div class="hide-page div-page" id="playlist-page">
             <h1>Your favorites 🍀</h1>
             <div class="favorites-container"></div>
+            <footer>
+                <div class="footer-icons">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
+                <p>Copyright © 2022, made by Vinit 💖</p>
+            </footer>
         </div>
+
     </main>
     <div class="audio-player">
         <div class="music-info">
